[package]
name = "monarch"
version = "0.0.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
petgraph = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
