[project]
name = "monarch"
version = "0.0.0"
description = "Move an organization's data between Sentry cells"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "PyYAML>=6",
]

[project.scripts]
monarch = "monarch.cli:main"

[dependency-groups]
dev = [
    "pyright>=1.1",
    "ruff>=0.14",
]

[tool.pyright]
include = ["monarch", "mock_storages"]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["E501"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["monarch"]
